Update all my kittens

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "express-kittens",
   "version": "1.0.0",
-  "description": "",
+  "description": "Kittens on servers",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start:db": "mongod --dbpath ~/data/db",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,10 @@
     "mongoose": "^5.7.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
+    "mongodb-memory-server": "^5.2.7",
+    "nodemon": "^1.19.3",
+    "supertest": "^4.0.2"
   }
 }
